<resources>
    <string name="app_name">Health Project</string>
    <string name="splash_copyright">© Ailiv 2021 </string>
    <string name="dashboard"> Dashboard </string>
    <string name="report"> Your Report </string>
    <string name="my_result"> My Result </string>
    <string name="no_data"> No Data </string>
    <string name="age"> Input your age here </string>
    <string name="gender"> Please choose your Gender : </string>
    <string name="type"> Type of nutrient content </string>
    <string name="description"> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                                Lorem Ipsum has been the industry is standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                                It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                                It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
                                </string>
    <string name="content"> Nutrient content </string>
    <string name="food"> Food Name </string>
    <string name="lemak"> Lemak </string>
    <string name="kalori"> Kalori  </string>
    <string name="kolesterol"> Kolesterol  </string>
    <string name="protein"> Protein  </string>
    <string name="karbohidrat"> Karbohidrat  </string>
    <string name="Sodium"> Sodium  </string>
    <string name="kalium"> Kalium  </string>
    <string name="colon"> : </string>
    <string name="percentage"> %%% </string>
    <string name="resize_image">RESIZE IMAGE</string>
</resources>