<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAC8FF"
    tools:context=".Result">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#DAC8FF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="16dp"
            android:src="@drawable/splash"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0."
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/txt_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/my_result"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"></TextView>

        <ScrollView
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_dashboard"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_food"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:src="@drawable/nodata"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_foodName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_food"
                    android:layout_centerHorizontal="true"
                    android:text="@string/food"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/img_food"
                    app:layout_constraintStart_toStartOf="@+id/img_food"
                    app:layout_constraintTop_toBottomOf="@+id/img_food" />

                <androidx.cardview.widget.CardView
                    android:layout_width="390dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_foodName"
                    tools:ignore="MissingConstraints">

                    <RelativeLayout
                        android:id="@+id/rv_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_search_desc"
                        tools:layout_editor_absoluteX="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_nutrientType"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/type"
                                android:textColor="@android:color/black"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txt_nutrientDescription"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:maxLines="10"
                                android:text="@string/description" />

                        </LinearLayout>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>