<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAC8FF"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#DAC8FF"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@android:color/white" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="16dp"
            android:src="@drawable/splash"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar" />

        <TextView
            android:id="@+id/txt_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <ImageView
            android:id="@+id/img_food"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:src="@drawable/nodata"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_dashboard" />

        <TextView
            android:id="@+id/txt_noData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_food"
            android:layout_centerHorizontal="true"
            android:text="@string/no_data"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_food" />

        <com.example.healthproject.EditText
            android:id="@+id/txt_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_noData" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/gender"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_name" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <RadioButton
                android:id="@+id/radio_pirates"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:onClick="onRadioButtonClicked"
                android:text="Female" />

            <RadioButton
                android:id="@+id/radio_ninjas"
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:onClick="onRadioButtonClicked"
                android:text="Male" />
        </RadioGroup>

        <com.example.healthproject.Button
            android:id="@+id/btn_send"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/float_cam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="#A590CB"
            android:foregroundGravity="bottom"
            app:fabSize="normal"
            app:layout_anchorGravity="bottom|end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/camera"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_send2"
            android:layout_width="134dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:text="Predict Image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_send"
            app:layout_constraintStart_toStartOf="@+id/btn_send"
            app:layout_constraintTop_toBottomOf="@+id/btn_send"
            app:layout_constraintVertical_bias="0.200" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>